syntax = "proto3";
package simple_mask_v1;
option go_package = "github.com/carousell/aggproto/examples/goOut/simple_mask_v1";
service MaskedListingService {
	rpc InvokeMaskedListing (MaskedListingRequest) returns (MaskedListingResponse);
}
message MaskedListingResponse {
	message ListingGen {
		message GetListingResponseGen {
			message ListingGen {
				string title = 1;
				string description = 2;
			}
			ListingGen listing = 1;
		}
		GetListingResponseGen GetListingResponse = 1;
	}
	ListingGen listing = 1;
}
message MaskedListingRequest {
	message GetListingRequestGen {
		string listing_id = 1;
	}
	GetListingRequestGen get_listing_request = 1;
}
